# life-manager

./: .dev.env  .env  .gitattributes  .gitignore  .prod.env  .test.env  AGENTS.md  Cargo.toml  README.md  build_and_start_app.sh  diesel.toml  docker-compose.yml  package-lock.json  package.json  start_app.sh
.cursor/rules/: frontend-react.mdc  rust-backend.mdc
.git-crypt/: .gitattributes
.github/workflows/: main.yml
backend/: .dev.env  .env  .prod.env  .test.env  AGENTS.md  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  docker-dev-entrypoint.sh  docker-entrypoint.sh  ollama-entrypoint.sh  start_backend.sh
backend/.container/: Dockerfile  build-image.sh  entrypoint.sh  run.sh
backend/.github/workflows/: main.yml
backend/auth/src/: auth_state.rs  auth_use_cases.rs  login_service.rs
backend/certs/: cert.pem  key.pem
backend/docs/: tls-setup.md
backend/libs/auth/: Cargo.toml
backend/libs/auth/migrations/2026-06-06-000000_create_auth_users/: down.sql  up.sql
backend/libs/auth/src/: application.rs  auth_user.rs  auth_user_entity.rs  db.rs  domain.rs  infrastructure.rs  lib.rs  login_handler.rs  login_request.rs  router.rs  schema.rs  test_protected_endpoint_handler.rs
backend/libs/auth/src/application/: auth_use_cases.rs
backend/libs/auth/src/domain/: auth_password_hasher.rs  default_admin.rs  jwt_secret.rs  login_request.rs  login_service.rs  principal.rs  principal_login_service.rs
backend/libs/auth/src/infrastructure/: argon_password_hasher.rs  auth_state.rs  auth_user.rs  auth_user_entity.rs  auth_user_seeder.rs  db.rs  login_handler.rs  principal_orm_collection.rs  superuser_only_login_service.rs  test_protected_endpoint_handler.rs  test_support.rs
backend/libs/common/backend-utils/: Cargo.toml
backend/libs/common/backend-utils/src/: app_error.rs  app_result.rs  lib.rs
backend/libs/common/server-host/: Cargo.toml
backend/libs/common/server-host/src/: lib.rs
backend/libs/life-manager/: Cargo.toml
backend/libs/life-manager/migrations/2026-03-07-000000_create_documents/: down.sql
backend/libs/life-manager/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  life_manager_tenant.rs
backend/libs/life-manager/src/domain/: uploaded_document_input.rs
backend/libs/life-manager/src/infrastructure/: app_state.rs  auth_integration.rs  db.rs  document.rs  noop_document_text_reader.rs
backend/libs/life-manager/src/infrastructure/document/: document_api_types.rs  document_dto.rs  document_handler.rs  document_orm_collection.rs  document_router.rs  document_state.rs
backend/life-manager/src/: application.rs  schema.rs
backend/life-manager/src/application/: document_use_cases.rs
backend/life-manager/src/domain/: uploaded_document_input.rs
backend/life-manager/src/infrastructure/: noop_document_text_reader.rs  tesseract_adapter.rs
backend/life-manager/src/infrastructure/document/: document_handler.rs  document_router.rs
backend/migrations/2025-08-30-164902_create_documents/: up.sql
backend/migrations/2026-03-07-000000_create_documents/: up.sql
backend/scripts/: export_ts_bindings.sh  write_rev.sh
backend/src/: application.rs  build_info.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  schema.rs
backend/src/application/: create_document_command.rs  document_repository.rs  document_use_cases.rs  get_document_query.rs  get_documents_query.rs
backend/src/domain/: document.rs  document_summarizer.rs  document_text_reader.rs  uploaded_document_input.rs
backend/src/infrastructure/: app_state.rs  auth.rs  auth_integration.rs  auth_user.rs  db.rs  document.rs  document_collection.rs  document_dto.rs  document_handler.rs  document_orm_collection.rs  document_state.rs  document_text_extraction.rs  http_client.rs  login.rs  noop_document_text_reader.rs  ollama_document_summarizer_adapter.rs  reqwest_http_client.rs  schema.rs  superuser_only_login_service.rs  tesseract_adapter.rs  tesseract_facade.rs  test_protected_endpoint.rs  test_protected_endpoint_handler.rs
backend/src/infrastructure/auth/: auth_router.rs  auth_state.rs  auth_use_cases.rs  auth_user.rs  login_handler.rs  login_service.rs  superuser_only_login_service.rs  test_protected_endpoint_handler.rs
backend/src/infrastructure/document/: document_collection.rs  document_dto.rs  document_entity.rs  document_handler.rs  document_orm_collection.rs  document_router.rs  document_state.rs
backend/tests/: auth_tests.rs  documents_tests.rs  login_tests.rs
backend/tests/common/: docker.rs  mod.rs  setup.rs
dev-container/: build-image.sh  run.sh
docs/: architecture.md  development_faq.md  sqlite-migration-plan.md  todos.md
docs/agents/: api.md  testing.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  app.config.ts  app.json  docker-dev-entrypoint.sh  nginx.conf  package-lock.json  package.json  start-frontend.sh  start_frontend.sh  tsconfig.json  vitest.config.mjs  vitest.setup.ts
frontend/app/: _layout.tsx  login.tsx
frontend/components/: document-create-form.test.tsx  document-create-form.tsx  document-list.test.tsx  document-list.tsx  themed-text.tsx
frontend/constants/: config.ts  theme.ts
frontend/contexts/: AuthContext.test.tsx  AuthContext.tsx
frontend/docs/: LOGIN_IMPLEMENTATION_PLAN.md  LOGIN_IMPLEMENTATION_SUMMARY.md
frontend/hooks/: color-scheme.test.ts  color-scheme.ts  use-color-scheme.web.ts  use-theme-color.ts
migrations/2025-08-30-164902_create_document/: up.sql
nginx/: gateway.Dockerfile
nginx/certs/: localhost.crt  localhost.key
nginx/docker-entrypoint.d/: 05-gen-localhost-certs.sh
nginx/templates/: default.conf.template
observability/: Dockerfile  loki-ship.alloy
observability/grafana/: Dockerfile
observability/loki/: Dockerfile  loki-config.yaml
scripts/: deploy-prod-lightsail.sh  loki-docker-plugin-setup.sh
src/: application.rs  document_entity.rs  infrastructure.rs  lib.rs  main.rs  schema.rs
src/application/: document_repository.rs
src/domain/: document.rs
src/infrastructure/: document_collection.rs  document_entity.rs  document_handler.rs  (+2 more)
tests/: documents_tests.rs  integration_tests.rs
(+39 files in other folders)
