[package]
name = "life-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.59"
axum = { version = "0.8.6", features = ["multipart"] }
chrono = "0.4"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
diesel_migrations = "2"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.0"
image = "0.25.5"
jsonwebtoken = "9"
lazy_static = "1.4"
ollama-rs = { version = "0.3.2", features = ["stream"] }
once_cell = "1"
pdf-extract = "0.7.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
time = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "time"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1.7"

[dev-dependencies]
axum-test = "18.1.0"
dotenv = "0.15.0"
image = "0.25.5"
imageproc = "0.25.0"
serial_test = "3.2.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
testcontainers = { version = "0.25.0" }
tracing-test = "0.2"
wiremock = "0.6.5"
