[workspace]
members = [".", "libs/auth", "libs/life-manager"]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5.3"
async-trait = "0.1.59"
axum = { version = "0.8.6", features = ["multipart"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
tracing = "0.1.41"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1.7"

[package]
name = "mikeyjay-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "life-manager"
path = "src/main.rs"

[dependencies]
auth = { path = "libs/auth" }
life-manager = { path = "libs/life-manager" }
axum = { workspace = true }
axum-server = "0.7.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "time"] }
uuid = { workspace = true }

[dev-dependencies]
axum-test = "18.1.0"
auth = { path = "libs/auth" }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
diesel_migrations = "2"
dotenv = "0.15.0"
image = "0.25.5"
imageproc = "0.25.0"
life-manager = { path = "libs/life-manager" }
once_cell = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serial_test = "3.2.0"
testcontainers = { version = "0.25.0" }
tracing-test = "0.2"
wiremock = "0.6.5"
