[package]
name = "life-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = "0.4"
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
diesel_migrations = "2"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
dotenvy = "0.15.0"
image = "0.25.5"
lazy_static = "1.4"
ollama-rs = { version = "0.3.2", features = ["stream"] }
once_cell = "1"
pdf-extract = "0.7.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde_json = "1.0.68"
serde = { workspace = true }
tempfile = "3"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
